y.output
Terminals unused in grammar

   TK_FIM
   TK_ERROR
   "=="
   "!="
   '<'
   '>'
   "<="
   ">="


State 22 conflicts: 2 reduce/reduce
State 26 conflicts: 2 shift/reduce
State 37 conflicts: 2 shift/reduce, 2 reduce/reduce
State 44 conflicts: 1 shift/reduce
State 46 conflicts: 1 shift/reduce
State 57 conflicts: 2 shift/reduce
State 75 conflicts: 11 shift/reduce, 2 reduce/reduce
State 78 conflicts: 11 shift/reduce, 2 reduce/reduce
State 80 conflicts: 1 reduce/reduce
State 84 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: DECLARACOES TK_TIPO_INT TK_MAIN '(' ')' BLOCO

    2 UP_S: %empty

    3 BLOCO: UP_S '{' COMANDOS '}'

    4 COMANDOS: COMANDO COMANDOS
    5         | %empty

    6 COMANDO: E ';'
    7        | E_UNARIA ';'
    8        | E_REL ';'
    9        | E_LOGICA ';'
   10        | DECLARACOES
   11        | BLOCO

   12 DECLARACOES: TK_PALAVRA_VAR TK_ID ';'
   13            | TK_PALAVRA_VAR TK_ID '=' VALOR_ATRIBUICAO ';'
   14            | ID '=' VALOR_ATRIBUICAO ';'
   15            | %empty

   16 ID: TK_ID

   17 TERMO: TK_NUM
   18      | ID
   19      | TK_CHAR

   20 VALOR_ATRIBUICAO: E
   21                 | E_UNARIA
   22                 | E_LOGICA
   23                 | TK_CONVERSAO_EXPLICITA VALOR_ATRIBUICAO

   24 E: E '+' E
   25  | E '-' E
   26  | E1

   27 E1: E1 '*' E1
   28   | E1 '/' E1
   29   | '(' E ')'
   30   | '(' E1 ')'
   31   | '(' '-' TERMO ')'
   32   | TERMO
   33   | TK_CONVERSAO_EXPLICITA E
   34   | TK_STRING

   35 E_UNARIA: '-' TERMO
   36         | '+' '+' TERMO
   37         | '-' '-' TERMO

   38 E_LOGICA: E_LOGICA TK_OP_LOGICO_BIN E_LOGICA
   39         | TK_OP_LOGICO_UNA E_LOGICA
   40         | ID
   41         | TK_BOOL
   42         | '(' E_LOGICA ')'
   43         | E_REL

   44 TERMO_REL: E

   45 E_REL: TERMO_REL TK_OP_RELACIONAL TERMO_REL
   46      | '(' E_REL ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 1 29 30 31 42 46
')' (41) 1 29 30 31 42 46
'*' (42) 27
'+' (43) 24 36
'-' (45) 25 31 35 37
'/' (47) 28
';' (59) 6 7 8 9 12 13 14
'<' (60)
'=' (61) 13 14
'>' (62)
'{' (123) 3
'}' (125) 3
error (256)
TK_NUM (258) 17
TK_BOOL (259) 41
TK_CHAR (260) 19
TK_STRING (261) 34
TK_OP_LOGICO_BIN (262) 38
TK_OP_LOGICO_UNA (263) 39
TK_OP_RELACIONAL (264) 45
TK_MAIN (265) 1
TK_ID (266) 12 13 16
TK_TIPO_INT (267) 1
TK_PALAVRA_VAR (268) 12 13
TK_FIM (269)
TK_ERROR (270)
TK_CONVERSAO_EXPLICITA (271) 23 33
"==" (272)
"!=" (273)
"<=" (274)
">=" (275)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
S (34)
    on left: 1, on right: 0
UP_S (35)
    on left: 2, on right: 3
BLOCO (36)
    on left: 3, on right: 1 11
COMANDOS (37)
    on left: 4 5, on right: 3 4
COMANDO (38)
    on left: 6 7 8 9 10 11, on right: 4
DECLARACOES (39)
    on left: 12 13 14 15, on right: 1 10
ID (40)
    on left: 16, on right: 14 18 40
TERMO (41)
    on left: 17 18 19, on right: 31 32 35 36 37
VALOR_ATRIBUICAO (42)
    on left: 20 21 22 23, on right: 13 14 23
E (43)
    on left: 24 25 26, on right: 6 20 24 25 29 33 44
E1 (44)
    on left: 27 28 29 30 31 32 33 34, on right: 26 27 28 30
E_UNARIA (45)
    on left: 35 36 37, on right: 7 21
E_LOGICA (46)
    on left: 38 39 40 41 42 43, on right: 9 22 38 39 42
TERMO_REL (47)
    on left: 44, on right: 45
E_REL (48)
    on left: 45 46, on right: 8 43 46


State 0

    0 $accept: . S $end

    TK_ID           shift, and go to state 1
    TK_PALAVRA_VAR  shift, and go to state 2

    $default  reduce using rule 15 (DECLARACOES)

    S            go to state 3
    DECLARACOES  go to state 4
    ID           go to state 5


State 1

   16 ID: TK_ID .

    $default  reduce using rule 16 (ID)


State 2

   12 DECLARACOES: TK_PALAVRA_VAR . TK_ID ';'
   13            | TK_PALAVRA_VAR . TK_ID '=' VALOR_ATRIBUICAO ';'

    TK_ID  shift, and go to state 6


State 3

    0 $accept: S . $end

    $end  shift, and go to state 7


State 4

    1 S: DECLARACOES . TK_TIPO_INT TK_MAIN '(' ')' BLOCO

    TK_TIPO_INT  shift, and go to state 8


State 5

   14 DECLARACOES: ID . '=' VALOR_ATRIBUICAO ';'

    '='  shift, and go to state 9


State 6

   12 DECLARACOES: TK_PALAVRA_VAR TK_ID . ';'
   13            | TK_PALAVRA_VAR TK_ID . '=' VALOR_ATRIBUICAO ';'

    '='  shift, and go to state 10
    ';'  shift, and go to state 11


State 7

    0 $accept: S $end .

    $default  accept


State 8

    1 S: DECLARACOES TK_TIPO_INT . TK_MAIN '(' ')' BLOCO

    TK_MAIN  shift, and go to state 12


State 9

   14 DECLARACOES: ID '=' . VALOR_ATRIBUICAO ';'

    TK_NUM                  shift, and go to state 13
    TK_BOOL                 shift, and go to state 14
    TK_CHAR                 shift, and go to state 15
    TK_STRING               shift, and go to state 16
    TK_OP_LOGICO_UNA        shift, and go to state 17
    TK_ID                   shift, and go to state 1
    TK_CONVERSAO_EXPLICITA  shift, and go to state 18
    '+'                     shift, and go to state 19
    '-'                     shift, and go to state 20
    '('                     shift, and go to state 21

    ID                go to state 22
    TERMO             go to state 23
    VALOR_ATRIBUICAO  go to state 24
    E                 go to state 25
    E1                go to state 26
    E_UNARIA          go to state 27
    E_LOGICA          go to state 28
    TERMO_REL         go to state 29
    E_REL             go to state 30


State 10

   13 DECLARACOES: TK_PALAVRA_VAR TK_ID '=' . VALOR_ATRIBUICAO ';'

    TK_NUM                  shift, and go to state 13
    TK_BOOL                 shift, and go to state 14
    TK_CHAR                 shift, and go to state 15
    TK_STRING               shift, and go to state 16
    TK_OP_LOGICO_UNA        shift, and go to state 17
    TK_ID                   shift, and go to state 1
    TK_CONVERSAO_EXPLICITA  shift, and go to state 18
    '+'                     shift, and go to state 19
    '-'                     shift, and go to state 20
    '('                     shift, and go to state 21

    ID                go to state 22
    TERMO             go to state 23
    VALOR_ATRIBUICAO  go to state 31
    E                 go to state 25
    E1                go to state 26
    E_UNARIA          go to state 27
    E_LOGICA          go to state 28
    TERMO_REL         go to state 29
    E_REL             go to state 30


State 11

   12 DECLARACOES: TK_PALAVRA_VAR TK_ID ';' .

    $default  reduce using rule 12 (DECLARACOES)


State 12

    1 S: DECLARACOES TK_TIPO_INT TK_MAIN . '(' ')' BLOCO

    '('  shift, and go to state 32


State 13

   17 TERMO: TK_NUM .

    $default  reduce using rule 17 (TERMO)


State 14

   41 E_LOGICA: TK_BOOL .

    $default  reduce using rule 41 (E_LOGICA)


State 15

   19 TERMO: TK_CHAR .

    $default  reduce using rule 19 (TERMO)


State 16

   34 E1: TK_STRING .

    $default  reduce using rule 34 (E1)


State 17

   39 E_LOGICA: TK_OP_LOGICO_UNA . E_LOGICA

    TK_NUM                  shift, and go to state 13
    TK_BOOL                 shift, and go to state 14
    TK_CHAR                 shift, and go to state 15
    TK_STRING               shift, and go to state 16
    TK_OP_LOGICO_UNA        shift, and go to state 17
    TK_ID                   shift, and go to state 1
    TK_CONVERSAO_EXPLICITA  shift, and go to state 33
    '('                     shift, and go to state 21

    ID         go to state 22
    TERMO      go to state 23
    E          go to state 34
    E1         go to state 26
    E_LOGICA   go to state 35
    TERMO_REL  go to state 29
    E_REL      go to state 30


State 18

   23 VALOR_ATRIBUICAO: TK_CONVERSAO_EXPLICITA . VALOR_ATRIBUICAO
   33 E1: TK_CONVERSAO_EXPLICITA . E

    TK_NUM                  shift, and go to state 13
    TK_BOOL                 shift, and go to state 14
    TK_CHAR                 shift, and go to state 15
    TK_STRING               shift, and go to state 16
    TK_OP_LOGICO_UNA        shift, and go to state 17
    TK_ID                   shift, and go to state 1
    TK_CONVERSAO_EXPLICITA  shift, and go to state 18
    '+'                     shift, and go to state 19
    '-'                     shift, and go to state 20
    '('                     shift, and go to state 21

    ID                go to state 22
    TERMO             go to state 23
    VALOR_ATRIBUICAO  go to state 36
    E                 go to state 37
    E1                go to state 26
    E_UNARIA          go to state 27
    E_LOGICA          go to state 28
    TERMO_REL         go to state 29
    E_REL             go to state 30


State 19

   36 E_UNARIA: '+' . '+' TERMO

    '+'  shift, and go to state 38


State 20

   35 E_UNARIA: '-' . TERMO
   37         | '-' . '-' TERMO

    TK_NUM   shift, and go to state 13
    TK_CHAR  shift, and go to state 15
    TK_ID    shift, and go to state 1
    '-'      shift, and go to state 39

    ID     go to state 40
    TERMO  go to state 41


State 21

   29 E1: '(' . E ')'
   30   | '(' . E1 ')'
   31   | '(' . '-' TERMO ')'
   42 E_LOGICA: '(' . E_LOGICA ')'
   46 E_REL: '(' . E_REL ')'

    TK_NUM                  shift, and go to state 13
    TK_BOOL                 shift, and go to state 14
    TK_CHAR                 shift, and go to state 15
    TK_STRING               shift, and go to state 16
    TK_OP_LOGICO_UNA        shift, and go to state 17
    TK_ID                   shift, and go to state 1
    TK_CONVERSAO_EXPLICITA  shift, and go to state 33
    '-'                     shift, and go to state 42
    '('                     shift, and go to state 21

    ID         go to state 22
    TERMO      go to state 23
    E          go to state 43
    E1         go to state 44
    E_LOGICA   go to state 45
    TERMO_REL  go to state 29
    E_REL      go to state 46


State 22

   18 TERMO: ID .
   40 E_LOGICA: ID .

    TK_OP_LOGICO_BIN  reduce using rule 40 (E_LOGICA)
    ')'               reduce using rule 18 (TERMO)
    ')'               [reduce using rule 40 (E_LOGICA)]
    ';'               reduce using rule 18 (TERMO)
    ';'               [reduce using rule 40 (E_LOGICA)]
    $default          reduce using rule 18 (TERMO)


State 23

   32 E1: TERMO .

    $default  reduce using rule 32 (E1)


State 24

   14 DECLARACOES: ID '=' VALOR_ATRIBUICAO . ';'

    ';'  shift, and go to state 47


State 25

   20 VALOR_ATRIBUICAO: E .
   24 E: E . '+' E
   25  | E . '-' E
   44 TERMO_REL: E .

    '+'  shift, and go to state 48
    '-'  shift, and go to state 49

    TK_OP_RELACIONAL  reduce using rule 44 (TERMO_REL)
    $default          reduce using rule 20 (VALOR_ATRIBUICAO)


State 26

   26 E: E1 .
   27 E1: E1 . '*' E1
   28   | E1 . '/' E1

    '*'  shift, and go to state 50
    '/'  shift, and go to state 51

    '*'       [reduce using rule 26 (E)]
    '/'       [reduce using rule 26 (E)]
    $default  reduce using rule 26 (E)


State 27

   21 VALOR_ATRIBUICAO: E_UNARIA .

    $default  reduce using rule 21 (VALOR_ATRIBUICAO)


State 28

   22 VALOR_ATRIBUICAO: E_LOGICA .
   38 E_LOGICA: E_LOGICA . TK_OP_LOGICO_BIN E_LOGICA

    TK_OP_LOGICO_BIN  shift, and go to state 52

    $default  reduce using rule 22 (VALOR_ATRIBUICAO)


State 29

   45 E_REL: TERMO_REL . TK_OP_RELACIONAL TERMO_REL

    TK_OP_RELACIONAL  shift, and go to state 53


State 30

   43 E_LOGICA: E_REL .

    $default  reduce using rule 43 (E_LOGICA)


State 31

   13 DECLARACOES: TK_PALAVRA_VAR TK_ID '=' VALOR_ATRIBUICAO . ';'

    ';'  shift, and go to state 54


State 32

    1 S: DECLARACOES TK_TIPO_INT TK_MAIN '(' . ')' BLOCO

    ')'  shift, and go to state 55


State 33

   33 E1: TK_CONVERSAO_EXPLICITA . E

    TK_NUM                  shift, and go to state 13
    TK_CHAR                 shift, and go to state 15
    TK_STRING               shift, and go to state 16
    TK_ID                   shift, and go to state 1
    TK_CONVERSAO_EXPLICITA  shift, and go to state 33
    '('                     shift, and go to state 56

    ID     go to state 40
    TERMO  go to state 23
    E      go to state 57
    E1     go to state 26


State 34

   24 E: E . '+' E
   25  | E . '-' E
   44 TERMO_REL: E .

    '+'  shift, and go to state 48
    '-'  shift, and go to state 49

    $default  reduce using rule 44 (TERMO_REL)


State 35

   38 E_LOGICA: E_LOGICA . TK_OP_LOGICO_BIN E_LOGICA
   39         | TK_OP_LOGICO_UNA E_LOGICA .

    TK_OP_LOGICO_BIN  shift, and go to state 52

    $default  reduce using rule 39 (E_LOGICA)


State 36

   23 VALOR_ATRIBUICAO: TK_CONVERSAO_EXPLICITA VALOR_ATRIBUICAO .

    $default  reduce using rule 23 (VALOR_ATRIBUICAO)


State 37

   20 VALOR_ATRIBUICAO: E .
   24 E: E . '+' E
   25  | E . '-' E
   33 E1: TK_CONVERSAO_EXPLICITA E .
   44 TERMO_REL: E .

    '+'  shift, and go to state 48
    '-'  shift, and go to state 49

    TK_OP_RELACIONAL  reduce using rule 33 (E1)
    TK_OP_RELACIONAL  [reduce using rule 44 (TERMO_REL)]
    '+'               [reduce using rule 33 (E1)]
    '-'               [reduce using rule 33 (E1)]
    ';'               reduce using rule 20 (VALOR_ATRIBUICAO)
    ';'               [reduce using rule 33 (E1)]
    $default          reduce using rule 33 (E1)


State 38

   36 E_UNARIA: '+' '+' . TERMO

    TK_NUM   shift, and go to state 13
    TK_CHAR  shift, and go to state 15
    TK_ID    shift, and go to state 1

    ID     go to state 40
    TERMO  go to state 58


State 39

   37 E_UNARIA: '-' '-' . TERMO

    TK_NUM   shift, and go to state 13
    TK_CHAR  shift, and go to state 15
    TK_ID    shift, and go to state 1

    ID     go to state 40
    TERMO  go to state 59


State 40

   18 TERMO: ID .

    $default  reduce using rule 18 (TERMO)


State 41

   35 E_UNARIA: '-' TERMO .

    $default  reduce using rule 35 (E_UNARIA)


State 42

   31 E1: '(' '-' . TERMO ')'

    TK_NUM   shift, and go to state 13
    TK_CHAR  shift, and go to state 15
    TK_ID    shift, and go to state 1

    ID     go to state 40
    TERMO  go to state 60


State 43

   24 E: E . '+' E
   25  | E . '-' E
   29 E1: '(' E . ')'
   44 TERMO_REL: E .

    '+'  shift, and go to state 48
    '-'  shift, and go to state 49
    ')'  shift, and go to state 61

    $default  reduce using rule 44 (TERMO_REL)


State 44

   26 E: E1 .
   27 E1: E1 . '*' E1
   28   | E1 . '/' E1
   30   | '(' E1 . ')'

    '*'  shift, and go to state 50
    '/'  shift, and go to state 51
    ')'  shift, and go to state 62

    ')'       [reduce using rule 26 (E)]
    $default  reduce using rule 26 (E)


State 45

   38 E_LOGICA: E_LOGICA . TK_OP_LOGICO_BIN E_LOGICA
   42         | '(' E_LOGICA . ')'

    TK_OP_LOGICO_BIN  shift, and go to state 52
    ')'               shift, and go to state 63


State 46

   43 E_LOGICA: E_REL .
   46 E_REL: '(' E_REL . ')'

    ')'  shift, and go to state 64

    ')'       [reduce using rule 43 (E_LOGICA)]
    $default  reduce using rule 43 (E_LOGICA)


State 47

   14 DECLARACOES: ID '=' VALOR_ATRIBUICAO ';' .

    $default  reduce using rule 14 (DECLARACOES)


State 48

   24 E: E '+' . E

    TK_NUM                  shift, and go to state 13
    TK_CHAR                 shift, and go to state 15
    TK_STRING               shift, and go to state 16
    TK_ID                   shift, and go to state 1
    TK_CONVERSAO_EXPLICITA  shift, and go to state 33
    '('                     shift, and go to state 56

    ID     go to state 40
    TERMO  go to state 23
    E      go to state 65
    E1     go to state 26


State 49

   25 E: E '-' . E

    TK_NUM                  shift, and go to state 13
    TK_CHAR                 shift, and go to state 15
    TK_STRING               shift, and go to state 16
    TK_ID                   shift, and go to state 1
    TK_CONVERSAO_EXPLICITA  shift, and go to state 33
    '('                     shift, and go to state 56

    ID     go to state 40
    TERMO  go to state 23
    E      go to state 66
    E1     go to state 26


State 50

   27 E1: E1 '*' . E1

    TK_NUM                  shift, and go to state 13
    TK_CHAR                 shift, and go to state 15
    TK_STRING               shift, and go to state 16
    TK_ID                   shift, and go to state 1
    TK_CONVERSAO_EXPLICITA  shift, and go to state 33
    '('                     shift, and go to state 56

    ID     go to state 40
    TERMO  go to state 23
    E1     go to state 67


State 51

   28 E1: E1 '/' . E1

    TK_NUM                  shift, and go to state 13
    TK_CHAR                 shift, and go to state 15
    TK_STRING               shift, and go to state 16
    TK_ID                   shift, and go to state 1
    TK_CONVERSAO_EXPLICITA  shift, and go to state 33
    '('                     shift, and go to state 56

    ID     go to state 40
    TERMO  go to state 23
    E1     go to state 68


State 52

   38 E_LOGICA: E_LOGICA TK_OP_LOGICO_BIN . E_LOGICA

    TK_NUM                  shift, and go to state 13
    TK_BOOL                 shift, and go to state 14
    TK_CHAR                 shift, and go to state 15
    TK_STRING               shift, and go to state 16
    TK_OP_LOGICO_UNA        shift, and go to state 17
    TK_ID                   shift, and go to state 1
    TK_CONVERSAO_EXPLICITA  shift, and go to state 33
    '('                     shift, and go to state 21

    ID         go to state 22
    TERMO      go to state 23
    E          go to state 34
    E1         go to state 26
    E_LOGICA   go to state 69
    TERMO_REL  go to state 29
    E_REL      go to state 30


State 53

   45 E_REL: TERMO_REL TK_OP_RELACIONAL . TERMO_REL

    TK_NUM                  shift, and go to state 13
    TK_CHAR                 shift, and go to state 15
    TK_STRING               shift, and go to state 16
    TK_ID                   shift, and go to state 1
    TK_CONVERSAO_EXPLICITA  shift, and go to state 33
    '('                     shift, and go to state 56

    ID         go to state 40
    TERMO      go to state 23
    E          go to state 34
    E1         go to state 26
    TERMO_REL  go to state 70


State 54

   13 DECLARACOES: TK_PALAVRA_VAR TK_ID '=' VALOR_ATRIBUICAO ';' .

    $default  reduce using rule 13 (DECLARACOES)


State 55

    1 S: DECLARACOES TK_TIPO_INT TK_MAIN '(' ')' . BLOCO

    $default  reduce using rule 2 (UP_S)

    UP_S   go to state 71
    BLOCO  go to state 72


State 56

   29 E1: '(' . E ')'
   30   | '(' . E1 ')'
   31   | '(' . '-' TERMO ')'

    TK_NUM                  shift, and go to state 13
    TK_CHAR                 shift, and go to state 15
    TK_STRING               shift, and go to state 16
    TK_ID                   shift, and go to state 1
    TK_CONVERSAO_EXPLICITA  shift, and go to state 33
    '-'                     shift, and go to state 42
    '('                     shift, and go to state 56

    ID     go to state 40
    TERMO  go to state 23
    E      go to state 73
    E1     go to state 44


State 57

   24 E: E . '+' E
   25  | E . '-' E
   33 E1: TK_CONVERSAO_EXPLICITA E .

    '+'  shift, and go to state 48
    '-'  shift, and go to state 49

    '+'       [reduce using rule 33 (E1)]
    '-'       [reduce using rule 33 (E1)]
    $default  reduce using rule 33 (E1)


State 58

   36 E_UNARIA: '+' '+' TERMO .

    $default  reduce using rule 36 (E_UNARIA)


State 59

   37 E_UNARIA: '-' '-' TERMO .

    $default  reduce using rule 37 (E_UNARIA)


State 60

   31 E1: '(' '-' TERMO . ')'

    ')'  shift, and go to state 74


State 61

   29 E1: '(' E ')' .

    $default  reduce using rule 29 (E1)


State 62

   30 E1: '(' E1 ')' .

    $default  reduce using rule 30 (E1)


State 63

   42 E_LOGICA: '(' E_LOGICA ')' .

    $default  reduce using rule 42 (E_LOGICA)


State 64

   46 E_REL: '(' E_REL ')' .

    $default  reduce using rule 46 (E_REL)


State 65

   24 E: E . '+' E
   24  | E '+' E .
   25  | E . '-' E

    $default  reduce using rule 24 (E)


State 66

   24 E: E . '+' E
   25  | E . '-' E
   25  | E '-' E .

    $default  reduce using rule 25 (E)


State 67

   27 E1: E1 . '*' E1
   27   | E1 '*' E1 .
   28   | E1 . '/' E1

    $default  reduce using rule 27 (E1)


State 68

   27 E1: E1 . '*' E1
   28   | E1 . '/' E1
   28   | E1 '/' E1 .

    $default  reduce using rule 28 (E1)


State 69

   38 E_LOGICA: E_LOGICA . TK_OP_LOGICO_BIN E_LOGICA
   38         | E_LOGICA TK_OP_LOGICO_BIN E_LOGICA .

    $default  reduce using rule 38 (E_LOGICA)


State 70

   45 E_REL: TERMO_REL TK_OP_RELACIONAL TERMO_REL .

    $default  reduce using rule 45 (E_REL)


State 71

    3 BLOCO: UP_S . '{' COMANDOS '}'

    '{'  shift, and go to state 75


State 72

    1 S: DECLARACOES TK_TIPO_INT TK_MAIN '(' ')' BLOCO .

    $default  reduce using rule 1 (S)


State 73

   24 E: E . '+' E
   25  | E . '-' E
   29 E1: '(' E . ')'

    '+'  shift, and go to state 48
    '-'  shift, and go to state 49
    ')'  shift, and go to state 61


State 74

   31 E1: '(' '-' TERMO ')' .

    $default  reduce using rule 31 (E1)


State 75

    3 BLOCO: UP_S '{' . COMANDOS '}'

    TK_NUM                  shift, and go to state 13
    TK_BOOL                 shift, and go to state 14
    TK_CHAR                 shift, and go to state 15
    TK_STRING               shift, and go to state 16
    TK_OP_LOGICO_UNA        shift, and go to state 17
    TK_ID                   shift, and go to state 1
    TK_PALAVRA_VAR          shift, and go to state 2
    TK_CONVERSAO_EXPLICITA  shift, and go to state 33
    '+'                     shift, and go to state 19
    '-'                     shift, and go to state 20
    '('                     shift, and go to state 21

    TK_NUM                  [reduce using rule 15 (DECLARACOES)]
    TK_BOOL                 [reduce using rule 15 (DECLARACOES)]
    TK_CHAR                 [reduce using rule 15 (DECLARACOES)]
    TK_STRING               [reduce using rule 15 (DECLARACOES)]
    TK_OP_LOGICO_UNA        [reduce using rule 15 (DECLARACOES)]
    TK_ID                   [reduce using rule 15 (DECLARACOES)]
    TK_PALAVRA_VAR          [reduce using rule 15 (DECLARACOES)]
    TK_CONVERSAO_EXPLICITA  [reduce using rule 15 (DECLARACOES)]
    '+'                     [reduce using rule 15 (DECLARACOES)]
    '-'                     [reduce using rule 15 (DECLARACOES)]
    '('                     [reduce using rule 15 (DECLARACOES)]
    '{'                     reduce using rule 2 (UP_S)
    '{'                     [reduce using rule 15 (DECLARACOES)]
    '}'                     reduce using rule 5 (COMANDOS)
    '}'                     [reduce using rule 15 (DECLARACOES)]
    $default                reduce using rule 2 (UP_S)

    UP_S         go to state 71
    BLOCO        go to state 76
    COMANDOS     go to state 77
    COMANDO      go to state 78
    DECLARACOES  go to state 79
    ID           go to state 80
    TERMO        go to state 23
    E            go to state 81
    E1           go to state 26
    E_UNARIA     go to state 82
    E_LOGICA     go to state 83
    TERMO_REL    go to state 29
    E_REL        go to state 84


State 76

   11 COMANDO: BLOCO .

    $default  reduce using rule 11 (COMANDO)


State 77

    3 BLOCO: UP_S '{' COMANDOS . '}'

    '}'  shift, and go to state 85


State 78

    4 COMANDOS: COMANDO . COMANDOS

    TK_NUM                  shift, and go to state 13
    TK_BOOL                 shift, and go to state 14
    TK_CHAR                 shift, and go to state 15
    TK_STRING               shift, and go to state 16
    TK_OP_LOGICO_UNA        shift, and go to state 17
    TK_ID                   shift, and go to state 1
    TK_PALAVRA_VAR          shift, and go to state 2
    TK_CONVERSAO_EXPLICITA  shift, and go to state 33
    '+'                     shift, and go to state 19
    '-'                     shift, and go to state 20
    '('                     shift, and go to state 21

    TK_NUM                  [reduce using rule 15 (DECLARACOES)]
    TK_BOOL                 [reduce using rule 15 (DECLARACOES)]
    TK_CHAR                 [reduce using rule 15 (DECLARACOES)]
    TK_STRING               [reduce using rule 15 (DECLARACOES)]
    TK_OP_LOGICO_UNA        [reduce using rule 15 (DECLARACOES)]
    TK_ID                   [reduce using rule 15 (DECLARACOES)]
    TK_PALAVRA_VAR          [reduce using rule 15 (DECLARACOES)]
    TK_CONVERSAO_EXPLICITA  [reduce using rule 15 (DECLARACOES)]
    '+'                     [reduce using rule 15 (DECLARACOES)]
    '-'                     [reduce using rule 15 (DECLARACOES)]
    '('                     [reduce using rule 15 (DECLARACOES)]
    '{'                     reduce using rule 2 (UP_S)
    '{'                     [reduce using rule 15 (DECLARACOES)]
    '}'                     reduce using rule 5 (COMANDOS)
    '}'                     [reduce using rule 15 (DECLARACOES)]
    $default                reduce using rule 2 (UP_S)

    UP_S         go to state 71
    BLOCO        go to state 76
    COMANDOS     go to state 86
    COMANDO      go to state 78
    DECLARACOES  go to state 79
    ID           go to state 80
    TERMO        go to state 23
    E            go to state 81
    E1           go to state 26
    E_UNARIA     go to state 82
    E_LOGICA     go to state 83
    TERMO_REL    go to state 29
    E_REL        go to state 84


State 79

   10 COMANDO: DECLARACOES .

    $default  reduce using rule 10 (COMANDO)


State 80

   14 DECLARACOES: ID . '=' VALOR_ATRIBUICAO ';'
   18 TERMO: ID .
   40 E_LOGICA: ID .

    '='  shift, and go to state 9

    TK_OP_LOGICO_BIN  reduce using rule 40 (E_LOGICA)
    ';'               reduce using rule 18 (TERMO)
    ';'               [reduce using rule 40 (E_LOGICA)]
    $default          reduce using rule 18 (TERMO)


State 81

    6 COMANDO: E . ';'
   24 E: E . '+' E
   25  | E . '-' E
   44 TERMO_REL: E .

    '+'  shift, and go to state 48
    '-'  shift, and go to state 49
    ';'  shift, and go to state 87

    $default  reduce using rule 44 (TERMO_REL)


State 82

    7 COMANDO: E_UNARIA . ';'

    ';'  shift, and go to state 88


State 83

    9 COMANDO: E_LOGICA . ';'
   38 E_LOGICA: E_LOGICA . TK_OP_LOGICO_BIN E_LOGICA

    TK_OP_LOGICO_BIN  shift, and go to state 52
    ';'               shift, and go to state 89


State 84

    8 COMANDO: E_REL . ';'
   43 E_LOGICA: E_REL .

    ';'  shift, and go to state 90

    ';'       [reduce using rule 43 (E_LOGICA)]
    $default  reduce using rule 43 (E_LOGICA)


State 85

    3 BLOCO: UP_S '{' COMANDOS '}' .

    $default  reduce using rule 3 (BLOCO)


State 86

    4 COMANDOS: COMANDO COMANDOS .

    $default  reduce using rule 4 (COMANDOS)


State 87

    6 COMANDO: E ';' .

    $default  reduce using rule 6 (COMANDO)


State 88

    7 COMANDO: E_UNARIA ';' .

    $default  reduce using rule 7 (COMANDO)


State 89

    9 COMANDO: E_LOGICA ';' .

    $default  reduce using rule 9 (COMANDO)


State 90

    8 COMANDO: E_REL ';' .

    $default  reduce using rule 8 (COMANDO)
